2021-10-08 Se agrega paginación para mm, bom y class

--- a/CódigoFuente/BitacorasProduccion/Views/Bom/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Bom/Index.cshtml
@@ -9,6 +9,14 @@
 
     Clases.Util.MensajesSweetAlert mensajeAlerta = (Clases.Util.MensajesSweetAlert)ViewBag.MensajeAlert;
 
+    //obtiene los filtros
+    Portal_2_0.Models.Paginacion paginacionFiltros = (Portal_2_0.Models.Paginacion)ViewBag.Paginacion;
+
+    string filtroMaterial = string.Empty;
+    if (paginacionFiltros.ValoresQueryString["material"] != null) {
+        filtroMaterial = paginacionFiltros.ValoresQueryString["material"].ToString();
+    }
+
 }
 
 @section estilos
@@ -56,14 +64,39 @@
                             <div class="col-sm-12">
                                 <div class="card-box table-responsive">
                                     <div class="form-group">
-                                        <a href="@Url.Action( "Create", ViewBag.ControllerName)" class="btn btn-success">
-                                            <i class="fa fa-plus-square"></i>
-                                            Crear nuevo
-                                        </a>
+                                        @using (Html.BeginForm(null, null, FormMethod.Get, new { id="buscarForm", @class = "form-horizontal form-label-left" }))
+                                        {
+                                        <div class="form-group row ">
+                                            <label class="control-label col-md-1 col-sm-1" for="material">Material</label>
+                                            <div class="col-md-3 col-sm-3">
+                                                <input type="text" class="form-control" name="material" id="material" value="@filtroMaterial">
+                                            </div>
+                                            <div class="col-md-1 col-sm-1">
+                                                <input type="button" value="borrar" class="btn btn-danger" id="borrarForm" />
+                                            </div>
+                                            <div class="col-md-1 col-sm-1">
+                                                <input type="submit" value="buscar" class="btn btn-info" />
+                                            </div>
+                                        </div>
+
+                                        }
+
                                     </div>
-                                    <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+                                    <table id="s" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
                                         <thead>
                                             <tr>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.Material)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.Plnt)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.AltBOM)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.Item)
+                                                </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.Component)
                                                 </th>
@@ -87,50 +120,70 @@
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.activo)
-                                                </th>                                                
+                                                </th>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             @foreach (var item in Model)
                                             {
-                                            <tr>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.Component)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.Created_by)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.BOM1)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.Node)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.Quantity)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.Un)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.Created)
-                                                </td>
-                                                <td>
-                                                    @if (item.activo)
-                                                    {
-                                                        <span>Activo</span>
-                                                    }
-                                                    else
-                                                    {
-                                                        <span>Inactivo</span>
-                                                    }
-                                                </td>                                                
-                                            </tr>
+                                                <tr>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.Material)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.Plnt)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.AltBOM)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.Item)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.Component)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.Created_by)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.BOM1)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.Node)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.Quantity)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.Un)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.Created)
+                                                    </td>
+                                                    <td>
+                                                        @if (item.activo)
+                                                        {
+                                                            <span>Activo</span>
+                                                        }
+                                                        else
+                                                        {
+                                                            <span>Inactivo</span>
+                                                        }
+                                                    </td>
+                                                </tr>
                                             }
                                         </tbody>
                                     </table>
+
                                 </div>
+                                <nav aria-label="...">
+                                    @{Html.RenderPartial("_Paginacion", Model);}
+
+                                </nav>
                             </div>
+
+
+
                         </div>
                     </div>
                 </div>
@@ -146,76 +199,14 @@
 
     @Scripts.Render("~/bundles/dataTables_js")
 
+    <script>
+        var form = document.getElementById("buscarForm");
+
+        $("#borrarForm").click(function () {
+            $('#material').val("");
+            form.submit();
+        });
+
+    </script>
+
 }
-
-
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Component)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Created_by)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.BOM1)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Node)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Quantity)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Un)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Created)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.activo)
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Component)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Created_by)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.BOM1)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Node)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Quantity)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Un)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Created)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.activo)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-    }
-
-</table>
