--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -88,20 +88,11 @@
                                             </ul>
                                         </li>
                                     }
-                                    @if (User.IsInRole(TipoRoles.USERS))
-                                    {
-                                        <li class="@(ViewBag.PrimerNivel == "usuarios" ? "active" : null )">
-                                            <a><i class="fa fa-cog"></i>Usuarios <span class="fa fa-chevron-down"></span></a>
-                                            <ul class="nav child_menu" style="@(ViewBag.PrimerNivel == "usuarios" ? "display:block" : null )">
-                                                <li class="@(ViewBag.SegundoNivel == "roles" ? "current-page" : null )"><a href="@Url.Action( "Index", "RolesAdmin")">Roles</a></li>
-                                                <li class="@(ViewBag.SegundoNivel == "usuarios" ? "current-page" : null )"><a href="@Url.Action("Index", "UsersAdmin")">Usuarios</a></li>
-                                            </ul>
-                                        </li>
-                                    }
-                                    @if (User.IsInRole(TipoRoles.ADMIN))
+
+                                    @if (User.IsInRole(TipoRoles.REPORTES_PESADAS))
                                     {
                                         <li class="@(ViewBag.PrimerNivel == "reporte_pesos" ? "active" : null )">
-                                            <a><i class="fa fa-file-excel-o"></i>Reporte Pesos <span class="fa fa-chevron-down"></span></a>
+                                            <a><i class="fa fa-file-excel-o"></i>Reporte Pesadas <span class="fa fa-chevron-down"></span></a>
                                             <ul class="nav child_menu" style="@(ViewBag.PrimerNivel == "reporte_pesos" ? "display:block" : null )">
                                                 <li class="@(ViewBag.SegundoNivel == "reporte_pesos_silao" ? "current-page" : null )"><a href="@Url.Action( "Silao", "ReportePesadas")">Silao</a></li>
                                                 <li class="@(ViewBag.SegundoNivel == "reporte_pesos_puebla" ? "current-page" : null )"><a href="@Url.Action( "Puebla", "ReportePesadas")">Puebla</a></li>
@@ -158,6 +149,16 @@
                                             </ul>
                                         </li>
 
+                                    }
+                                    @if (User.IsInRole(TipoRoles.USERS))
+                                    {
+                                        <li class="@(ViewBag.PrimerNivel == "usuarios" ? "active" : null )">
+                                            <a><i class="fa fa-cog"></i>Usuarios <span class="fa fa-chevron-down"></span></a>
+                                            <ul class="nav child_menu" style="@(ViewBag.PrimerNivel == "usuarios" ? "display:block" : null )">
+                                                <li class="@(ViewBag.SegundoNivel == "roles" ? "current-page" : null )"><a href="@Url.Action( "Index", "RolesAdmin")">Roles</a></li>
+                                                <li class="@(ViewBag.SegundoNivel == "usuarios" ? "current-page" : null )"><a href="@Url.Action("Index", "UsersAdmin")">Usuarios</a></li>
+                                            </ul>
+                                        </li>
                                     }
                                 </ul>
                             }
