--- a/CódigoFuente/BitacorasProduccion/Views/ReportePesadas/Silao.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ReportePesadas/Silao.cshtml
@@ -159,6 +159,9 @@
                                                     @Html.DisplayNameFor(model => model.SAP_Platina)
                                                 </th>
                                                 <th>
+                                                    @Html.DisplayNameFor(model => model.SAP_Rollo)
+                                                </th>
+                                                <th>
                                                     @Html.DisplayNameFor(model => model.Cliente)
                                                 </th>
                                                 <th>
@@ -214,6 +217,9 @@
                                             <tr>
                                                 <td>
                                                     @Html.DisplayFor(modelItem => item.SAP_Platina)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.SAP_Rollo)
                                                 </td>
                                                 <td>
                                                     @Html.DisplayFor(modelItem => item.Cliente)
