--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/DatosEntradas.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/DatosEntradas.cshtml
@@ -8,6 +8,7 @@
 
     Portal_2_0.Models.mm_v3 mm = (Portal_2_0.Models.mm_v3)ViewBag.MM;
     Portal_2_0.Models.class_v3 class_ = (Portal_2_0.Models.class_v3)ViewBag.Class;
+    int contador = 100;
 }
 
 @section estilos
@@ -87,7 +88,7 @@
                     </div>
                     <div class="x_content">
                         <br />
-                        @using (Html.BeginForm("DatosEntrada", "ProduccionRegistros", FormMethod.Post, new { @class = "form-horizontal form-label-left" }))
+                        @using (Html.BeginForm("DatosEntradas", "ProduccionRegistros", FormMethod.Post, new { @class = "form-horizontal form-label-left" }))
                         {
 
                             @Html.AntiForgeryToken()
@@ -221,16 +222,47 @@
                                 <div class="col-md-3">
                                     <input type="text" id="numero_golpes" class="form-control col-md-12" value="" readonly>
                                 </div>
-                            </div>
-                            <div class="ln_solid"></div>
-                            <div class="form-group row">
+                            </div><div class="ln_solid"></div><div class="form-group row">
                                 @*AQUÍ VA EL FORMULARIO DINÁMICO*@
                                 <span style="color:black">LOTES</span>
 
+                            </div><!---------------------  -----------  -----------  -----------  ------------------>
+                            <div id="div_lotes">
+                                @foreach (Portal_2_0.Models.produccion_lotes lote in Model.produccion_lotes)
+                                {
+                                    <div class="form-group row" id="div_lotes_@contador">
+                                        <input type="hidden" name="produccion_lotes.Index" id="produccion_lotes.Index" value="@contador" />
+                                        <label class="control-label col-md-1" for="produccion_lotes[@contador].numero_lote_izquierdo">
+                                            <span class="float-right">Lote Izquierdo</span>
+                                        </label>
+                                        <div class="col-md-2">
+                                            <input style="text-align:right" type="number" min="0" step="1" max="5000" name="produccion_lotes[@contador].numero_lote_izquierdo" id="produccion_lotes[@contador].lote_izquierdo" class="form-control col-md-12" value="@lote.numero_lote_izquierdo" autocomplete="off">
+                                            <span class="field-validation-valid text-danger" data-valmsg-for="produccion_lotes[@contador].numero_lote_izquierdo" data-valmsg-replace="true"></span>
+                                        </div>
+                                        <label class="control-label col-md-1" for="produccion_lotes[@contador].numero_lote_derecho">
+                                            <span class="float-right">Lote Derecho</span>
+                                        </label>
+                                        <div class="col-md-2">
+                                            <input type="number" min="0" step="1" max="5000" name="produccion_lotes[@contador].numero_lote_derecho" id="produccion_lotes[@contador].lote_derecho" class="form-control col-md-12" value="@lote.numero_lote_derecho" autocomplete="off">
+                                            <span class="field-validation-valid text-danger" data-valmsg-for="produccion_lotes[@contador].numero_lote_derecho" data-valmsg-replace="true"></span>
+                                        </div>
+                                        <label class="control-label col-md-2" for="produccion_lotes[@contador].piezas_paquete">
+                                            <span class="float-right">Piezas por paquete</span>
+                                        </label>
+                                        <div class="col-md-2">
+                                            <input type="number" min="0" step="1" max="5000" name="produccion_lotes[@contador].piezas_paquete" id="produccion_lotes[@contador].piezas_paquete" class="form-control col-md-12" value="@lote.piezas_paquete" maxlength="10" required>
+                                            <span class="field-validation-valid text-danger" data-valmsg-for="produccion_lotes[@contador].piezas_paquete" data-valmsg-replace="true"></span>
+                                        </div>
+                                        <div class="col-md-1">
+                                            <input type="button" value="Borrar" class="btn btn-danger" onclick="borrarLote(@contador); return false;">
+                                        </div>
+                                    </div>
+
+                                    contador++;
+                                }
                             </div>
 
-                            <!---------------------  -----------  -----------  -----------  ------------------>
-                            <div id="div_lotes"></div>
+
 
                             <div class="form-group row">
                                 <div class="col-md-11">
@@ -310,6 +342,13 @@
                             <div class="form-group row">
                                 <div class="col-md-11">
                                     <input type="button" value="Obtener Peso" class="btn btn-warning float-left" onclick="ObtenerPesoBascula(); return false;">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.produccion_datos_entrada.comentarios, new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    @Html.TextAreaFor(model => model.produccion_datos_entrada.comentarios, new { htmlAttributes = new { @class = "form-control col-md-12" } })
+                                    @Html.ValidationMessageFor(model => model.produccion_datos_entrada.comentarios, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="ln_solid"></div>
@@ -458,27 +497,27 @@
 
                 `
                 <div class="form-group row" id="div_lotes_`+ num +`">
-                                <input type="hidden" name="produccion_lotes_list.Index" id="produccion_lotes.Index" value="`+ num +`" />
-                                <label class="control-label col-md-1" for="produccion_lotes_list[`+ num + `].numero_lote_izquierdo">
+                                <input type="hidden" name="produccion_lotes.Index" id="produccion_lotes.Index" value="`+ num +`" />
+                                <label class="control-label col-md-1" for="produccion_lotes[`+ num + `].numero_lote_izquierdo">
                                     <span class="float-right">Lote Izquierdo</span>
                                 </label>
                                 <div class="col-md-2">
-                                    <input style="text-align:right" type="number" min="0" step="1" max="5000" name="produccion_lotes_list[`+ num + `].numero_lote_izquierdo" id="produccion_lotes_list[` + num +`].lote_izquierdo" class="form-control col-md-12" value="" autocomplete="off">
-                                    <span class="field-validation-valid text-danger" data-valmsg-for="produccion_lotes_list[` + num +`].numero_lote_izquierdo" data-valmsg-replace="true"></span>
+                                    <input style="text-align:right" type="number" min="0" step="1" max="5000" name="produccion_lotes[`+ num + `].numero_lote_izquierdo" id="produccion_lotes[` + num +`].lote_izquierdo" class="form-control col-md-12" value="" autocomplete="off">
+                                    <span class="field-validation-valid text-danger" data-valmsg-for="produccion_lotes[` + num +`].numero_lote_izquierdo" data-valmsg-replace="true"></span>
                                 </div>
-                                <label class="control-label col-md-1" for="produccion_lotes_list[`+ num + `].numero_lote_derecho">
+                                <label class="control-label col-md-1" for="produccion_lotes[`+ num + `].numero_lote_derecho">
                                     <span class="float-right">Lote Derecho</span>
                                 </label>
                                 <div class="col-md-2">
-                                    <input type="number" min="0" step="1" max="5000" name="produccion_lotes_list[`+ num + `].numero_lote_derecho" id="produccion_lotes_list[` + num +`].lote_derecho" class="form-control col-md-12" value="" autocomplete="off">
-                                    <span class="field-validation-valid text-danger" data-valmsg-for="produccion_lotes_list[` + num +`].numero_lote_derecho" data-valmsg-replace="true"></span>
+                                    <input type="number" min="0" step="1" max="5000" name="produccion_lotes[`+ num + `].numero_lote_derecho" id="produccion_lotes[` + num +`].lote_derecho" class="form-control col-md-12" value="" autocomplete="off">
+                                    <span class="field-validation-valid text-danger" data-valmsg-for="produccion_lotes[` + num +`].numero_lote_derecho" data-valmsg-replace="true"></span>
                                 </div>
-                                <label class="control-label col-md-2" for="produccion_lotes_list[`+ num + `].piezas_paquete">
+                                <label class="control-label col-md-2" for="produccion_lotes[`+ num + `].piezas_paquete">
                                      <span class="float-right">Piezas por paquete</span>
                                 </label>
                                 <div class="col-md-2">
-                                    <input type="number" min="0" step="1" max="5000" name="produccion_lotes_list[`+ num + `].piezas_paquete" id="produccion_lotes_list[` + num +`].piezas_paquete" class="form-control col-md-12" value="" maxlength="10" required>
-                                       <span class="field-validation-valid text-danger" data-valmsg-for="produccion_lotes_list[` + num +`].piezas_paquete" data-valmsg-replace="true"></span>
+                                    <input type="number" min="0" step="1" max="5000" name="produccion_lotes[`+ num + `].piezas_paquete" id="produccion_lotes[` + num +`].piezas_paquete" class="form-control col-md-12" value="" maxlength="10" required>
+                                       <span class="field-validation-valid text-danger" data-valmsg-for="produccion_lotes[` + num +`].piezas_paquete" data-valmsg-replace="true"></span>
                                     </div>
                                 <div class="col-md-1">
                                     <input type="button" value="Borrar" class="btn btn-danger" onclick="borrarLote(` + num +`); return false;">
